--- a/src/components/ui/preview-card.astro
+++ b/src/components/ui/preview-card.astro
@@ -16,17 +16,17 @@ const { id, slug, name, description, imageUrl }: Props = Astro.props;
 <div class="flex flex-col justify-center items-center">
     <a href={`/product/${slug}`} class="hover:cursor-pointer">
         <div
-            class="relative bg-blue-400 border-3 rounded-2xl h-52 w-60 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow"
+            class="relative bg-black border-3 rounded-2xl h-52 w-60 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow"
  >
             <div
-                class="absolute -top-8 -left-12 text-5xl bg-pink-400 px-5 py-1 shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-t-2xl border-3 border-black rounded-bl-2xl rounded-br-sm"
+                class="absolute -top-8 -left-12 text-5xl bg-pink-400 px-5 py-1 shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-t-2xl border-3 border-black rounded-bl-2xl rounded-br-sm z-10"
             >
                 <Tag size={30}/>
             </div>
             <div
-                class="w-full h-full overflow-hidden top-10 left-0 rounded-2xl transition"
+                class="w-full h-full overflow-hidden top-10 left-0 rounded-2xl transition z-0"
             >
-                <img
+                <img                    
                     src={imageUrl}
                     alt={description}
                     loading="lazy"
@@ -37,7 +37,9 @@ const { id, slug, name, description, imageUrl }: Props = Astro.props;
             <button
                 class="absolute -bottom-14 right-0 px-5 py-1 bg-amber-400 border-black border-3 rounded-4xl shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer transition-shadow"
             >
-                {name}
+                <h2 class="text-sm font-medium">
+                    {name}
+                </h2>
             </button>
         </div>
     </a>
