refactor: update output configuration to 'server' and enhance Sidebar component with user profile link

--- a/src/components/ui/buttons/LogginButtons.astro
+++ b/src/components/ui/buttons/LogginButtons.astro
@@ -26,7 +26,7 @@ import {
     </SignedIn>
     <SignedOut>
         <SignInButton
-            class="px-6 py-2 text-black font-bold border border-black rounded-lg shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:border-1 hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition"
+            class="px-6 py-2 bg-amber-400 text-black font-bold border border-black rounded-lg shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:border-1 hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition"
             mode="modal"
         />
     </SignedOut>
