--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Sidebar from "@/components/sections/Sidebar.astro";
         />
 		<ClientRouter />
 	</head>
-	<body class="bg-primary dark:bg-gray-900">
+	<body class="bg-primary dark:bg-gray-900" id="body">
 		<Sidebar />	
 			<slot />		
 		<Footer />
