--- a/src/components/sections/Sidebar.astro
+++ b/src/components/sections/Sidebar.astro
@@ -2,13 +2,13 @@
 import { PanelLeftCloseIcon, PanelRightCloseIcon } from "lucide-react";
 import Button from "../ui/buttons/PrimaryButton.astro";
 import LogginButtons from "../ui/buttons/LogginButtons.astro";
+import { SignedIn } from "@clerk/astro/components";
 
 const NavDirections = [
     { href: "#home", text: "Inicio", color: "200,0,255,0.8" },
     { href: "#products", text: "Productos", color: "0,165,255,0.8" },
     { href: "#services", text: "Servicios", color: "40,200,0,0.8" },
     { href: "#contact", text: "Contacto", color: "255,160,0,0.8" },
-    { href: "/Profile", text: "Perfil", color: "200,0,255,0.8" },
 ];
 ---
 
@@ -21,7 +21,7 @@ const NavDirections = [
                 <img src="/logo.svg" alt="logo" class="w-10 h-10" />
                 <div class="flex flex-col">
                     <span class="text-lg font-bold">Making Something</span>
-                    <span class="text-center text-gray-400">(Beta 0.5.2)</span>
+                    <span class="text-center text-gray-400">(Beta 0.6.1)</span>
                 </div>
             </a>
         </div>
@@ -51,22 +51,29 @@ const NavDirections = [
         <div class="flex justify-center items-center pt-10">
             <LogginButtons></LogginButtons>
         </div>
-        <ul class="flex flex-col w-full h-full items-center pt-10 gap-12">
+        <ul class="flex flex-col w-full h-full items-center pt-20 gap-12">
             {
                 NavDirections.map((direction) => {
                     return (
                         <li>
-                            <button type="button" onclick="sidebarClick()">
-                                <Button
-                                    href={direction.href}
-                                    text={direction.text}
-                                    color={direction.color}
-                                />
-                            </button>
+                            <Button
+                                href={direction.href}
+                                text={direction.text}
+                                color={direction.color}
+                            />
                         </li>
                     );
                 })
             }
+            <li>
+                <SignedIn>
+                    <Button
+                        href="/Profile"
+                        text="Perfil"
+                        color="200,0,255,0.8"
+                        />
+                </SignedIn>
+            </li>
         </ul>
     </aside>
 </header>
