feat: Implement Navbar component with dynamic links and user profile button
feat: Create OrdersInfo component to display user orders with detailed information

feat: Add Badge component for order status representation

feat: Introduce AddCartButton component for adding products to the cart

feat: Develop CardItem component for displaying individual cart items

feat: Create CardOrder component to summarize the user's cart and facilitate order confirmation

feat: Implement Cart component for managing and displaying the shopping cart

feat: Add ProductCounter component for adjusting product quantities in the cart

feat: Create Sonner component for toast notifications

feat: Define product content schema using Zod for validation

feat: Define shipping schema using Zod for validation

feat: Implement cart store with state management for cart operations

feat: Implement user store for managing user data and orders

feat: Define types for cart, order, and product for better type safety

feat: Create Checkout page for processing orders

feat: Create CustomOrder page for personalized pin orders

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -25,11 +25,6 @@
                     </li>
                     <li>
                         <a href="#" class="text-gray-400 hover:text-white">
-                            Venta de juguetes
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="text-gray-400 hover:text-white">
                             Diseño y programacion web
                         </a>
                     </li>
@@ -38,16 +33,6 @@
             <div>
                 <h3 class="font-bold text-lg mb-4">Tienda</h3>
                 <ul class="space-y-2">
-                    <li>
-                        <a href="#" class="text-gray-400 hover:text-white">
-                            Todos los juguetes
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="text-gray-400 hover:text-white">
-                            Nuevos productos
-                        </a>
-                    </li>
                     <li>
                         <a href="#" class="text-gray-400 hover:text-white">
                             Pines personalizados
@@ -64,9 +49,11 @@
                 <h3 class="font-bold text-lg mb-4">Contacto</h3>
                 <ul class="space-y-2">
                     <li class="text-gray-400 hover:text-white">mar@makingsomething.com 😺</li>
-                    <li class="text-gray-400 hover:text-white">(+52) 771-354-9396 😽</li>
                     <li class="text-gray-400 hover:text-white">
-                        <a href="https://www.instagram.com/making.something_">Instagram 😸</a>
+                        <a href="https://wa.me/qr/AHFH55RNIGJ4J1" target="_blank">(+52) 771-354-9396 😽</a>
+                    </li>
+                    <li class="text-gray-400 hover:text-white">
+                        <a href="https://www.instagram.com/making.something_" target="_blank">Instagram 😸</a>
                     </li>
                 </ul>
             </div>
