--- a/src/components/sections/Sidebar.astro
+++ b/src/components/sections/Sidebar.astro
@@ -1,95 +1,50 @@
 ---
-import { PanelLeftCloseIcon, PanelRightCloseIcon } from "lucide-react";
-import Button from "../ui/buttons/PrimaryButton.astro";
-import LogginButtons from "../ui/buttons/LogginButtons.astro";
-import { SignedIn } from "@clerk/astro/components";
 
-const NavDirections = [
-    { href: "#home", text: "Inicio", color: "200,0,255,0.8" },
-    { href: "#products", text: "Productos", color: "0,165,255,0.8" },
-    { href: "#services", text: "Servicios", color: "40,200,0,0.8" },
-    { href: "#contact", text: "Contacto", color: "255,160,0,0.8" },
+import LogginButtons from "../ui/buttons/LogginButtons.astro";
+import { PanelRightCloseIcon } from "@lucide/astro";
+import Navbar from "./Navbar.astro";
+
+interface Props {
+    isHome?: boolean;
+}
+
+const { isHome = false } = Astro.props;
+
+const homeLinks = [
+    { label: "Inicio", href: "#home", color: "200,0,255,0.8" },
+    { label: "Productos", href: "#products", color: "0,165,255,0.8" },
+    { label: "Servicios", href: "#services", color: "40,200,0,0.8" },
+    { label: "Contacto", href: "#contact", color: "255,160,0,0.8" },
+];
+
+const pagesLinks = [
+    { label: "Inicio", href: "/", color: "200,0,255,0.8" },
+    { label: "Productos", href: "/Products", color: "0,165,255,0.8" },
+    { label: "Servicios", href: "/Blog", color: "40,200,0,0.8" },
 ];
 ---
 
-<header class="fixed w-full z-10 bg-primary flex justify-center items-center">
-    <section
-        class="flex container mx-auto py-6 px-4 items-center gap-32 justify-between"
-    >
-        <div>
-            <a href="/" class="flex items-center gap-2">
-                <img src="/logo.svg" alt="logo" class="w-10 h-10" />
-                <div class="flex flex-col">
-                    <span class="text-lg font-bold">Making Something</span>
-                    <span class="text-center text-gray-400">(Beta 0.6.1)</span>
-                </div>
-            </a>
-        </div>
-        <button
-            type="button"
-            onclick="handleClick()"
-            class="hamburger p-2 rounded-md hover:cursor-pointer hover:bg-gray-300/65 border-1 hover:border-gray-200 transition-colors duration-200 z-20"
-            aria-label="menu"
-        >
-            <PanelLeftCloseIcon />
-        </button>
-    </section>
+<div id="sidebar-container">
     <aside
         id="sidebar"
-        class="flex flex-col fixed w-1/2 h-full top-0 -right-20 bg-white px-7 border-1 border-gray-200 transform translate-x-full transition-transform duration-300 ease-in-out z-20 lg:w-[350px]"
+        class="fixed top-0 right-0 z-20 w-1/2 lg:w-[450px] h-full bg-white shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out"
     >
-        <div class="w-full flex justify-end items-center pt-7">
+        <div class="w-full flex justify-end items-center pt-6 pr-7">
             <button
-                type="button"
-                onclick="handleClick()"
-                class="hamburger p-2 rounded-md hover:cursor-pointer hover:bg-gray-300/60 border-1 hover:border-gray-200 transition-colors duration-200 z-20"
-                aria-label="menu"
+                id="close-sidebar"
+                class="p-2 rounded-lg hover:bg-gray-200 border-1 hover:border-gray-100 transition-colors duration-200 hover:cursor-pointer"
+                aria-label="cerrar barra lateral"
             >
                 <PanelRightCloseIcon />
             </button>
         </div>
         <div class="flex justify-center items-center pt-10">
-            <LogginButtons></LogginButtons>
+            <LogginButtons server:defer/>
         </div>
-        <ul class="flex flex-col w-full h-full items-center pt-20 gap-12">
-            {
-                NavDirections.map((direction) => {
-                    return (
-                        <li>
-                            <Button
-                                href={direction.href}
-                                text={direction.text}
-                                color={direction.color}
-                            />
-                        </li>
-                    );
-                })
-            }
-            <li>
-                <SignedIn>
-                    <Button
-                        href="/Profile"
-                        text="Perfil"
-                        color="200,0,255,0.8"
-                        />
-                </SignedIn>
-            </li>
-        </ul>
+        {isHome ? (
+            <Navbar links={homeLinks} />
+        ) : (
+            <Navbar links={pagesLinks} />
+        )}
     </aside>
-</header>
-
-<script is:inline>
-    const handleClick = () => {
-        const sidebar = document.getElementById("sidebar");
-        if (sidebar.classList.contains("transform")) {
-            sidebar.classList.remove("transform");
-            sidebar.classList.remove("translate-x-full");
-            sidebar.classList.remove("-right-20");
-            sidebar.classList.add("right-0");
-            sidebar.classList.add("translate-x-30%");
-        } else {
-            sidebar.classList.add("transform");
-            sidebar.classList.add("translate-x-full");
-        }
-    };
-</script>
+</div>
