--- a/src/pages/Profile.astro
+++ b/src/pages/Profile.astro
@@ -1,16 +1,24 @@
 ---
+import OrdersInfo from "@/components/sections/OrdersInfo";
 import UserInfo from "@/components/sections/UserInfo";
 import Layout from "@/layouts/Layout.astro";
 
 ---
 
 <Layout>
-    <section class="flex flex-col items-center justify-center w-full min-h-screen mt-5 px-2">
+    <section class="items-center justify-center w-full min-h-screen mt-5 px-2">
         <div class="flex items-center justify-center">
-            <p>Pagina de prueba, porfavor asegurese de no insertar datos reales ^^ </p>
+            <p>Pagina en beta, no es necesario insertar datos reales ^^</p>
         </div>
-        <div class="container mx-auto pt-6">
+        <article class="container mx-auto pt-6">
             <UserInfo client:idle />
-        </div>
+        </article>
+        <article class="container mx-auto py-10 lg:py-40">
+            <h2 class="text-2xl font-bold mb-4">Mis pedidos</h2>
+            <p class="text-gray-600 mb-4">
+                Aquí puedes ver el historial de tus pedidos.
+            </p>
+            <OrdersInfo client:idle />            
+        </article>
     </section>
-</Layaout>
+</Layout>
