--- a/src/pages/product/[slug].astro
+++ b/src/pages/product/[slug].astro
@@ -2,11 +2,10 @@
 export const prerender = true;
 import { getCollection } from "astro:content";
 
-import ProductLayout from "@/layouts/ProductLayout.astro";
-import { Button } from "@/components/ui/button.tsx";
-import { Input } from "@/components/ui/input.tsx";
-import { Plus, Minus } from "@lucide/astro";
+import Layout from "@/layouts/Layout.astro";
 import { SliderProduct } from "@/components/ui/slider-product.tsx";
+import Counter from "@/components/ui/product-counter";
+import AddCartButton from "@/components/ui/buttons/AddCartButton";
 
 export async function getStaticPaths() {
     const products = await getCollection("products");
@@ -21,7 +20,7 @@ const { product } = Astro.props;
 const { id, name, description, price, imagesUrl } = product.data;
 ---
 
-<ProductLayout>
+<Layout>
     <section
         class="flex flex-col items-center justify-evenly px-4 lg:px-40 min-h-screen lg:flex-row w-full py-40 gap-24 lg:gap-0"
     >
@@ -41,95 +40,21 @@ const { id, name, description, price, imagesUrl } = product.data;
             </div>
             <div class="flex flex-col gap-8 h-1/2 p-6 pt-0">
                 <div>
-                    <h2 transition:name={`title-${name}`} class="text-lg font-medium">
+                    <h2 class="text-lg font-medium">
                         ${price} MXN C/U
                     </h2>
                 </div>
-                <div class="mt-4">
+                <div class="my-4">
                     <p>
                         {description}
                     </p>
                 </div>
             </div>
             <div class="flex flex-col gap-4">
-                <div class="flex justify-center items-center">
-                    <Button
-                        id="decrement"
-                        className="bg-white hover:bg-gray-200 hover:cursor-pointer"
-                    >
-                        <Minus color="black" />
-                    </Button>
-                    <Input
-                        id="counter"
-                        type="number"
-                        defaultValue="0"
-                        className="w-1/3 text-center [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none [-moz-appearance:textfield]"
-                    />
-                    <Button
-                        id="increment"
-                        className="bg-white hover:bg-gray-200 hover:cursor-pointer"
-                    >
-                        <Plus color="black" />
-                    </Button>
-                </div>
-                <div class="flex justify-center items-center gap-2">
-                    <Button
-                        id="increment-ten"
-                        className="bg-white hover:bg-gray-200 hover:cursor-pointer text-black"
-                    >
-                        <Plus color="black" />10
-                    </Button>
-                    <Button
-                        id="increment-thirty"
-                        className="bg-white hover:bg-gray-200 hover:cursor-pointer text-black"
-                    >
-                        <Plus color="black" />30
-                    </Button>
-                    <Button
-                        id="increment-fifty"
-                        className="bg-white hover:bg-gray-200 hover:cursor-pointer text-black"
-                    >
-                        <Plus color="black" />50
-                    </Button>
-                </div>
-                <button
-                    class="px-6 py-2 w-full text-black rounded-sm bg-amber-400 hover:bg-amber-600 hover:cursor-pointer shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition"
-                >
-                <a href="https://wa.me/qr/AHFH55RNIGJ4J1" target="_blank">
-                    Añdir al carrito
-                </a>
-                </button>
-            </div>
+                <Counter client:idle/>
+                <AddCartButton id={product.slug} client:idle />
+            </div>            
         </article>
     </section>
-</ProductLayout>
+</Layout>
 
-<script is:inline>
-    const input = document.querySelector("#counter");
-    const btnAdd = document.querySelector("#increment");
-    const btnSub = document.querySelector("#decrement");
-    const btnAddTen = document.querySelector("#increment-ten");
-    const btnAddThirty = document.querySelector("#increment-thirty");
-    const btnAddFifty = document.querySelector("#increment-fifty");
-
-    btnAdd?.addEventListener("click", () => {
-        input.value = parseInt(input.value || "0") + 1;
-    });
-
-    btnSub?.addEventListener("click", () => {
-        const current = parseInt(input.value || "0");
-        input.value = current > 0 ? current - 1 : 0;
-    });
-
-    btnAddTen?.addEventListener("click", () => {
-        input.value = parseInt(input.value || "0") + 10;
-    });
-
-    btnAddThirty?.addEventListener("click", () => {
-        input.value = parseInt(input.value || "0") + 30;
-    });
-
-    btnAddFifty?.addEventListener("click", () => {
-        input.value = parseInt(input.value || "0") + 50;
-    });
-</script>
