--- a/src/components/sections/CartProducts.astro
+++ b/src/components/sections/CartProducts.astro
@@ -5,9 +5,9 @@ import {
     CardFooter,
     CardHeader,
     CardTitle,
-} from "../ui/card";
-import { Separator } from "../ui/separator";
-import Counter from "../ui/product-counter";
+} from "@/components/ui/card";
+import { Separator } from "@/components/ui/separator";
+import Counter from "@/components/ui/product-counter";
 ---
 
 <article>
