refactor: update import path for CardOrder component to use relative path

--- a/src/pages/Checkout.astro
+++ b/src/pages/Checkout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ShippingForm from "@/components/forms/shipping-form";
-import CardOrder from '@/components/ui/card-order';
+import CardOrder from '../components/ui/card-order';
 ---
 
 <Layout>
