--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false
 import "../styles/global.css";
 import Footer from "@/components/sections/Footer.astro";
 import { ClientRouter, slide } from "astro:transitions";
