--- a/src/components/sections/CartProducts.astro
+++ b/src/components/sections/CartProducts.astro
@@ -5,7 +5,7 @@ import {
     CardFooter,
     CardHeader,
     CardTitle,
-} from "@/components/ui/card";
+} from "@/components/ui/custom-card";
 import { Separator } from "@/components/ui/separator";
 import Counter from "@/components/ui/product-counter";
 ---
