Refactor authentication and user fetching logic
- Removed the auth.ts file and its registration logic.
- Updated SandBox.astro to include FetchUserButton component.
- Added new assetsignore_worker.js and routes.json files.
- Created index.ts to define server actions and user actions.
- Implemented user.ts with getUsers action to fetch user data.
- Developed fetchUserButton component to trigger user fetching.
- Configured wrangler.jsonc for deployment settings.

--- a/src/pages/SandBox.astro
+++ b/src/pages/SandBox.astro
@@ -1,10 +1,11 @@
 ---
 import Badge from "@/components/ui/badge.astro";
+import FetchUserButton from "@/components/ui/buttons/fetchUserButton";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
-    <section class="h-full flex justify-center items-center">
-        <Badge text="Proximamente"></Badge>
+    <section class="min-h-full flex justify-center items-center">
+        <FetchUserButton client:idle/>
     </section>
 </Layout>
