Launching v0.8.0 Refactor API endpoints and database schema for order management
- Updated API URLs in utils.ts to use a unified API_URL variable.
- Enhanced the index.astro page layout for better readability and structure.
- Created a new Prisma schema for managing users, orders, products, and shipping addresses.
- Implemented order-related actions in order.ts for fetching and creating orders.
- Developed mock data for users and products in user-mock.ts for testing purposes.
- Established a connection to the database using Prisma in prisma.ts.
- Added hooks for managing order information in useOrderInfo.ts.
- Defined Zod schemas for order validation in order-schema.ts.
- Created nanostores for managing order state in orderStore.ts.
- Developed API routes for order management, including CRUD operations for orders and shipping addresses.
- Implemented user-related API endpoints for fetching user data and addresses.
- Integrated webhook handling for user creation events from Clerk in saveUser.ts.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,6 @@
 export const prerender = false
 import "../styles/global.css";
 import Footer from "@/components/sections/Footer.astro";
-import { ClientRouter, slide } from "astro:transitions";
 import Header from "@/components/sections/Header.astro";
 import Sidebar from "@/components/sections/Sidebar.astro";
 import Cart from "@/components/ui/cart";
@@ -22,13 +21,12 @@ const { isHome = false } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Making Something</title>
-		<ClientRouter />
 	</head>
 	<body class="bg-primary dark:bg-gray-900">
 		<Header />
 		<Sidebar isHome={isHome}/>
         <Cart client:load/>	
-			<main transition:animate={slide({ duration: '0.5s' })}  class="flex flex-col">
+			<main class="flex flex-col">
 				<slot />		
 			</main>
 		<Footer />
