--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,86 +10,85 @@ import Badge from "@/components/ui/badge.astro";
 ---
 
 <Layout isHome={true}>
-        <section
-            id="home"
-            class="min-h-screen pb-40 flex justify-center items-center flex-col lg:flex-row px-4 xl:px-40 gap-10 md:gap-0"
+    <section
+        id="home"
+        class="min-h-screen pb-40 flex justify-center items-center flex-col lg:flex-row px-4 xl:px-40 gap-10 md:gap-0"
+    >
+        <div
+            class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3"
         >
-            <div
-                class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3"
-            >
-                <p class="font-medium text-gray-800">
-                    Hola, bienvenido a <span class="font-bold"
-                        >Making Something</span
-                    > ^^
-                </p>
-                <h1 class="font-extrabold text-7xl">
-                    If you can imagine you can make it! 😼
-                </h1>
-                <p class="font-medium text-gray-800">
-                    Explora nuestra selección de productos más vendidos,
-                    sumérgete en nuestro blog y acompáñanos en cada paso de
-                    nuestro camino.
-                </p>
-                <SecondaryButton
-                    href="/"
-                    text="Ver productos"
-                    color="bg-amber-400"
+            <p class="font-medium text-gray-800">
+                Hola, bienvenido a <span class="font-bold"
+                    >Making Something</span
+                > ^^
+            </p>
+            <h1 class="font-extrabold text-7xl">
+                If you can imagine you can make it! 😼
+            </h1>
+            <p class="font-medium text-gray-800">
+                Explora nuestra selección de productos más vendidos, sumérgete
+                en nuestro blog y acompáñanos en cada paso de nuestro camino.
+            </p>
+            <SecondaryButton
+                href="/"
+                text="Ver productos"
+                color="bg-amber-400"
+            />
+        </div>
+        <!-- <div class="md:w-1/2 object-contain flex items-center justify-center p-10 group"></div>-->
+    </section>
+
+    <section
+        id="products"
+        class="min-h-screen px-4 flex justify-center items-center flex-col gap-10 md:gap-0 lg:flex-row"
+    >
+        <div
+            class="flex flex-col gap-6 justify-center items-start lg:pl-40 xl:pl-80 lg:pr-10"
+        >
+            <p class="font-medium text-gray-800">
+                Explora nuestra selección de productos más vendidos
+            </p>
+            <h2 class="font-extrabold text-5xl">
+                ¡Sumérgete en nuestro catálogo! 🛍️
+            </h2>
+            <p class="font-medium text-gray-800">
+                Descubre los productos más vendidos de la temporada, encuentra
+                el regalo perfecto para esa persona especial o simplemente date
+                un gusto a ti mismo.
+            </p>
+            <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
+        </div>
+        <div class="w-full flex justify-center items-center lg:w-1/2">
+            <Slider />
+        </div>
+    </section>
+
+    <section
+        id="services"
+        class="py-20 w-full min-h-screen lg:h-full px-4 flex justify-center items-center flex-col"
+    >
+        <div class="py-20 px-2 md:px-20 xl:px-100">
+            <h2 class="font-extrabold text-5xl text-center">
+                Descubre todos los servicios que ofrecemos 🛠️
+            </h2>
+        </div>
+        <div class="grid xl:grid-cols-2 gap-8 lg:gap-12 w-full md:w-4/6">
+            <div class="flex justify-center items-center">
+                <CardService
+                    name="Creación de Pines Personalizados🔥"
+                    color="0,200,0,1"
+                    description="Diseñamos y fabricamos pines personalizados para cualquier ocasión. ¡Haz que tu estilo brille!"
                 />
             </div>
-            <!-- <div class="md:w-1/2 object-contain flex items-center justify-center p-10 group"></div>-->
-        </section>
-
-        <section
-            id="products"
-            class="min-h-screen px-4 flex justify-center items-center flex-col gap-10 md:gap-0 lg:flex-row"
-        >
-            <div
-                class="flex flex-col gap-6 justify-center items-start lg:pl-40 xl:pl-80 lg:pr-10"
-            >
-                <p class="font-medium text-gray-800">
-                    Explora nuestra selección de productos más vendidos
-                </p>
-                <h2 class="font-extrabold text-5xl">
-                    ¡Sumérgete en nuestro catálogo! 🛍️
-                </h2>
-                <p class="font-medium text-gray-800">
-                    Descubre los productos más vendidos de la temporada,
-                    encuentra el regalo perfecto para esa persona especial o
-                    simplemente date un gusto a ti mismo.
-                </p>
-                <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
+            <div class="relative flex justify-center items-center">
+                <CardService
+                    name="Diseño e impresion 3D💡"
+                    description="Fabricamos juguetes, piezas de coleccion y cosplay. ¡Haz realidad tus ideas!"
+                    color="0,165,255,1"
+                />
+                <Badge text="Proximamente" />
             </div>
-            <div class="w-full flex justify-center items-center lg:w-1/2">
-                <Slider />
-            </div>
-        </section>
-
-        <section
-            id="services"
-            class="py-20 w-full min-h-screen lg:h-full px-4 flex justify-center items-center flex-col"
-        >
-            <div class="py-20 px-2 md:px-20 xl:px-100">
-                <h2 class="font-extrabold text-5xl text-center">
-                    Descubre todos los servicios que ofrecemos 🛠️
-                </h2>
-            </div>
-            <div class="grid xl:grid-cols-2 gap-8 lg:gap-12 w-full md:w-4/6">
-                <div class="flex justify-center items-center">
-                    <CardService
-                        name="Creación de Pines Personalizados🔥"
-                        color="0,200,0,1"
-                        description="Diseñamos y fabricamos pines personalizados para cualquier ocasión. ¡Haz que tu estilo brille!"
-                    />
-                </div>
-                <div class="relative flex justify-center items-center">
-                    <CardService
-                        name="Diseño e impresion 3D💡"
-                        description="Fabricamos juguetes, piezas de coleccion y cosplay. ¡Haz realidad tus ideas!"
-                        color="0,165,255,1"
-                    />
-                    <Badge text="Proximamente"></Badge>
-                </div>
-                <!-- 
+            <!-- 
                 <div class="relative flex justify-center items-center">
                     <CardService
                         name="Diseño y programacion web💻"
@@ -99,52 +98,54 @@ import Badge from "@/components/ui/badge.astro";
                     <Badge text="Proximamente"></Badge>
                 </div>
                 -->
-                <div class="relative flex justify-center items-center">
-                    <CardService
-                        name="Autos a escala🚗"
-                        color="255,130,0,1"
-                        description="Proximamente a la venta autos a escala 1:24 ideales para coleccionistas y amantes de los autos. ¡Haz tu colección unica!"
-                    />
-                    <Badge text="Proximamente"></Badge>
-                </div>
+            <div class="relative flex justify-center items-center">
+                <CardService
+                    name="Autos a escala🚗"
+                    color="255,130,0,1"
+                    description="Proximamente a la venta autos a escala 1:24 ideales para coleccionistas y amantes de los autos. ¡Haz tu colección unica!"
+                />
+                <Badge text="Proximamente" />
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section
-            id="contact"
-            class="py-20 px-4 w-full min-h-screen xl:h-full flex justify-center items-center flex-col xl:flex-row gap-16"
+    <section
+        id="contact"
+        class="py-20 px-4 w-full min-h-screen xl:h-full flex justify-center items-center flex-col xl:flex-row gap-16"
+    >
+        <div
+            class="flex flex-col gap-6 justify-center items-center md:w-4/6 xl:w-3/8"
         >
-            <div
-                class="flex flex-col gap-6 justify-center items-center md:w-4/6 xl:w-3/8"
-            >
-                <p class="font-medium text-gray-800 text-center">
-                    ¡Get in touch!
-                </p>
-                <h2 class="font-extrabold text-5xl text-center">
-                    ¿Tienes una idea en mente? 💡
-                </h2>
-                <p class="font-medium text-gray-800 text-center">
-                    Ya sea que necesite un diseño personalizado, un servicio de
-                    impresión 3D o tenga preguntas sobre nuestros juguetes,
-                    mandanos mensaje a nuestras redes sociales y te responderemos enseguida.
-                </p>
-            </div>
-            <div 
-                id="card-social"
-                class="p-6 xl:w-1/3 flex flex-col justify-center items-center">
-                <CardSocial></CardSocial>
-            </div>
-            <div 
-                id="email-form"
-                class="hidden justify-center items-center p-6 xl:w-1/3">
-                <ContactForm client:idle />
-            </div>
-            <button onclick="showEmailForm()" class="flex justify-center items-center p-4 border-1 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-full">
-                    <RefreshCw />
-            </button>
-        </section>
+            <p class="font-medium text-gray-800 text-center">¡Get in touch!</p>
+            <h2 class="font-extrabold text-5xl text-center">
+                ¿Tienes una idea en mente? 💡
+            </h2>
+            <p class="font-medium text-gray-800 text-center">
+                Ya sea que necesite un diseño personalizado, un servicio de
+                impresión 3D o tenga preguntas sobre nuestros juguetes, mandanos
+                mensaje a nuestras redes sociales y te responderemos enseguida.
+            </p>
+        </div>
+        <div
+            id="card-social"
+            class="p-6 xl:w-1/3 flex flex-col justify-center items-center"
+        >
+            <CardSocial />
+        </div>
+        <div
+            id="email-form"
+            class="hidden justify-center items-center p-6 xl:w-1/3"
+        >
+            <ContactForm client:idle />
+        </div>
+        <button
+            onclick="showEmailForm()"
+            class="flex justify-center items-center p-4 border-1 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-full"
+        >
+            <RefreshCw />
+        </button>
+    </section>
 </Layout>
-
 
 <script is:inline>
     const showEmailForm = () => {
@@ -153,8 +154,7 @@ import Badge from "@/components/ui/badge.astro";
         if (cardSocial && emailForm.getAttribute("class").includes("hidden")) {
             cardSocial.classList.add("hidden");
             emailForm.classList.remove("hidden");
-        }
-        else {            
+        } else {
             cardSocial.classList.remove("hidden");
             emailForm.classList.add("hidden");
         }
