--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,12 +138,12 @@ import Badge from "@/components/ui/badge.astro";
         >
             <ContactForm client:idle />
         </div>
-        <button
+        <!-- <button
             onclick="showEmailForm()"
             class="flex justify-center items-center p-4 border-1 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-full"
         >
             <RefreshCw />
-        </button>
+        </button> -->
     </section>
 </Layout>
 
