--- a/src/pages/Profile.astro
+++ b/src/pages/Profile.astro
@@ -2,15 +2,16 @@
 import OrdersInfo from "@/components/sections/OrdersInfo";
 import UserInfo from "@/components/sections/UserInfo";
 import Layout from "@/layouts/Layout.astro";
-
+import { Image } from 'astro:assets';
 ---
 
 <Layout>
     <section class="items-center justify-center w-full min-h-screen mt-5 px-2">
         <div class="flex items-center justify-center">
-            <p>Pagina en beta, no es necesario insertar datos reales ^^</p>
+            <p>En construccioooooon ^^</p>
         </div>
-        <article class="container mx-auto pt-6">
+        <Image src="/assets/under_construction.png" alt="Página en construcción" width="600" height="400" class="mx-auto my-10"/>
+        <!-- <article class="container mx-auto pt-6">
             <UserInfo client:idle />
         </article>
         <article class="container mx-auto py-10 lg:py-40">
@@ -19,6 +20,6 @@ import Layout from "@/layouts/Layout.astro";
                 Aquí puedes ver el historial de tus pedidos.
             </p>
             <OrdersInfo client:idle />            
-        </article>
+        </article> -->
     </section>
 </Layout>
