--- a/src/pages/SandBox.astro
+++ b/src/pages/SandBox.astro
@@ -1,11 +1,9 @@
 ---
-import Badge from "@/components/ui/badge.astro";
-import FetchUserButton from "@/components/ui/buttons/fetchUserButton";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
-    <section class="min-h-full flex justify-center items-center">
-        <FetchUserButton client:idle/>
+    <section class="min-h-full flex justify-center items-center p-10">
+        
     </section>
 </Layout>
