style: Update button styles for consistency and remove unused code Rerfactor: Change userFetch function to use supabase auth funtcion to retireve user data

--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -15,7 +15,7 @@ import { PanelRightOpen, ShoppingCartIcon } from "@lucide/astro";
         </div>
         <div class="flex justify-center items-center gap-4">
             <button
-                class='p-2 rounded-lg hover:bg-gray-200 border-1 hover:border-gray-100 transition-colors duration-200 hover:cursor-pointer'
+                class='p-2 rounded-lg hover:bg-gray-200 border-1 border-gray-200 transition-colors duration-200 hover:cursor-pointer'
                 id='open-cart'>
                 <ShoppingCartIcon
                 aria-label='Abrir carrito de compra'
@@ -24,7 +24,7 @@ import { PanelRightOpen, ShoppingCartIcon } from "@lucide/astro";
             </button>
             <button 
                 id="open-sidebar" 
-                class="p-2 rounded-lg hover:bg-gray-200 border-1 hover:border-gray-100 transition-colors duration-200 hover:cursor-pointer"
+                class="p-2 rounded-lg hover:bg-gray-200 border-1 border-gray-200 transition-colors duration-200 hover:cursor-pointer"
                 aria-label="Abrir menú">
                 <PanelRightOpen />
             </button>
