--- a/src/components/sections/Sidebar.astro
+++ b/src/components/sections/Sidebar.astro
@@ -20,7 +20,6 @@ const homeLinks = [
 const pagesLinks = [
     { label: "Inicio", href: "/", color: "200,0,255,0.8" },
     { label: "Productos", href: "/Products", color: "0,165,255,0.8" },
-    { label: "Blog", href: "/Blog", color: "40,200,0,0.8" },
 ];
 ---
 
@@ -32,7 +31,7 @@ const pagesLinks = [
         <div class="w-full flex justify-end items-center pt-6 pr-7">
             <button
                 id="close-sidebar"
-                class="p-2 rounded-lg hover:bg-gray-200 border-1 hover:border-gray-100 transition-colors duration-200 hover:cursor-pointer"
+                class="p-2 rounded-lg hover:bg-gray-200 border-1 border-gray-200 transition-colors duration-200 hover:cursor-pointer"
                 aria-label="cerrar barra lateral"
             >
                 <PanelRightCloseIcon />
