--- a/src/pages/Profile.astro
+++ b/src/pages/Profile.astro
@@ -10,8 +10,7 @@ import { Image } from 'astro:assets';
         <div class="flex items-center justify-center">
             <p>En construccioooooon ^^</p>
         </div>
-        <Image src="/assets/under_construction.png" alt="Página en construcción" width="600" height="400" class="mx-auto my-10"/>
-        <!-- <article class="container mx-auto pt-6">
+        <article class="container mx-auto pt-6">
             <UserInfo client:idle />
         </article>
         <article class="container mx-auto py-10 lg:py-40">
@@ -20,6 +19,6 @@ import { Image } from 'astro:assets';
                 Aquí puedes ver el historial de tus pedidos.
             </p>
             <OrdersInfo client:idle />            
-        </article> -->
+        </article>
     </section>
 </Layout>
