--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@
   --destructive: #ef4343;
   --destructive-foreground: #fafafa;
   --border: #d1d1d1;
-  --input: #f5f5f5;
+  --input: #e5e7eb;
   --ring: #1a1a1a;
   --chart-1: #60a5fa;
   --chart-2: #4ade80;
@@ -55,16 +55,18 @@
   --shadow-y: 4px;
   --shadow-blur: 0px;
   --shadow-spread: 1px;
-  --shadow-opacity: 1;
+  --shadow-opacity: .25;
   --shadow-color: #1a1a1a;
   --shadow-2xs: 4px 4px 0px 1px hsl(0 0% 10.1961% / 0.50);
   --shadow-xs: 4px 4px 0px 1px hsl(0 0% 10.1961% / 0.50);
-  --shadow-sm: 4px 4px 0px 1px hsl(0 0% 10.1961% / 1.00), 4px 1px 2px 0px hsl(0 0% 10.1961% / 1.00);
-  --shadow: 4px 4px 0px 1px hsl(0 0% 10.1961% / 1.00), 4px 1px 2px 0px hsl(0 0% 10.1961% / 1.00);
-  --shadow-md: 4px 4px 0px 1px hsl(0 0% 10.1961% / 1.00), 4px 2px 4px 0px hsl(0 0% 10.1961% / 1.00);
-  --shadow-lg: 4px 4px 0px 1px hsl(0 0% 10.1961% / 1.00), 4px 4px 6px 0px hsl(0 0% 10.1961% / 1.00);
-  --shadow-xl: 4px 4px 0px 1px hsl(0 0% 10.1961% / 1.00), 4px 8px 10px 0px hsl(0 0% 10.1961% / 1.00);
-  --shadow-2xl: 4px 4px 0px 1px hsl(0 0% 10.1961% / 2.50);
+  --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --shadow-none: 0 0 #0000;
   --tracking-normal: 0em;
   --spacing: 0.25rem;
 }
